# DEV_TRAILS_HACKATHON

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/androidTest/java/com/example/shieldnet/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/shieldnet/: MainActivity.kt  ShieldNetApp.kt
app/src/main/java/com/example/shieldnet/ar/: ArNavigationActivity.kt
app/src/main/java/com/example/shieldnet/dashboard/: ClaimsAdapter.kt  DashboardFragment.kt  DashboardViewModel.kt
app/src/main/java/com/example/shieldnet/di/: AppModule.kt
app/src/main/res/drawable/: bg_badge_green.xml  bg_glow_teal.xml  bg_input_field.xml  bg_premium_gradient.xml  bg_spinner.xml  circular_progress.xml  ic_ar.xml  ic_search.xml  ic_shield_check.xml
app/src/main/res/layout/: activity_ar_navigation.xml  fragment_dashboard.xml  fragment_otp.xml  fragment_policy_purchase.xml  fragment_register.xml  fragment_risk_score.xml  item_claim.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/example/shieldnet/: ExampleUnitTest.kt
fraud-service/: Cargo.toml
fraud-service/src/: main.rs  ml.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ktor-backend/: Dockerfile  build.gradle.kts
ktor-backend/src/main/kotlin/com/example/: Application.kt  Database.kt  FraudClient.kt  FraudLog.kt  FraudModels.kt  MongoService.kt  Policy.kt  User.kt
(+14 files in other folders)
