[package]
name = "fraud-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shieldnet-fraud"
path = "src/main.rs"

[dependencies]
actix-web  = "4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }
smartcore = "0.3.2"
